--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
   <audio id="sfx-combo"   src="assets/sound/combo_up.mp3" preload="auto"></audio>
   <audio id="sfx-clear"   src="assets/sound/level_up.mp3" preload="auto"></audio>
   <audio id="bgm"         src="assets/sound/background.mp3"    preload="auto" loop></audio>
- 
+  <!-- <audio id="fever_bgm"         src=""    preload="auto" loop></audio> -->
 
   <!-- 모듈 스크립트  -->
   <script src="js/config.js"></script>
