프롤로그 추가

--- a/index.html
+++ b/index.html
@@ -93,8 +93,33 @@
       </aside>
     </div>
 
+    <!-- 프롤로그 오버레이 -->
+    <div id="prologue-overlay" class="overlay prologue-overlay">
+      <div class="panel prologue-panel">
+        <div class="prologue-content">
+          <div class="prologue-divider">━━━━━━━━━━━━━━━━━━━━━━</div>
+          <h2 class="prologue-title">💼 머니캐쳐 💼</h2>
+          <div class="prologue-divider">━━━━━━━━━━━━━━━━━━━━━━</div>
+          <div class="prologue-text">
+            <p>2025년, 당신은 경제적 자유를</p>
+            <p>꿈꾸는 평범한 직장인입니다.</p>
+            <br>
+            <p>떨어지는 돈을 모으고</p>
+            <p>빚과 세금을 피하세요!</p>
+            <br>
+            <p>과연 당신은 부의 자유에</p>
+            <p>도달할 수 있을까요?</p>
+          </div>
+          <div class="prologue-divider">━━━━━━━━━━━━━━━━━━━━━━</div>
+        </div>
+        <div class="row">
+          <button id="btn-start-prologue" class="primary">나는 부자가 될꺼야!</button>
+        </div>
+      </div>
+    </div>
+
     <!-- 오버레이 -->
-    <div id="overlay" class="overlay">
+    <div id="overlay" class="overlay" hidden>
       <div class="panel">
         <h2 id="ov-title">머니 캐쳐</h2>
         <p id="ov-sub">좌,우 스와이프 또는 방향키로 요원을 이동하세요.</p>
