pause 기능 수정 및 불필요한 주석 제거
1. 게임시작 / 일시정지 pause 이후 바로시작이 아닌 카운트다운으로 조정

2. 불필요한 쓸데없는 주석 제거

--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
 
         <!-- 배너 -->
         <div id="banner" class="banner" hidden role="alert" aria-live="assertive" aria-atomic="true"></div>
+        
+        <!-- 카운트다운 표시 -->
+        <div id="countdown" class="countdown" hidden></div>
       </div>
 
       <!-- 사이드바: 점수 및 정보 표시 (테트리스 스타일) -->
