--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
 
         <!-- 생명 표시 (게임 내부) -->
         <div id="hearts-display" class="hearts-display" role="status" aria-live="polite" aria-label="생명력">
-          <span class="life-label">LIFE</span>
-          <span id="hearts-count" class="hearts-count" aria-label="남은 생명">×5</span>
+          <div id="hearts-count" class="hearts-count" aria-label="남은 생명"></div>
         </div>
 
         <!-- 버프 표시 (게임 내부) -->
