Revert "생명 스타일 변경"
This reverts commit 7845fa1e306d7f3f483741402f3af6f6513afde5.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
 
         <!-- 생명 표시 (게임 내부) -->
         <div id="hearts-display" class="hearts-display" role="status" aria-live="polite" aria-label="생명력">
-          <div id="hearts-count" class="hearts-count" aria-label="남은 생명"></div>
+          <span class="life-label">LIFE</span>
+          <span id="hearts-count" class="hearts-count" aria-label="남은 생명">×5</span>
         </div>
 
         <!-- 버프 표시 (게임 내부) -->
