--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
         </div>
 
         <!-- 생명 표시 (게임 내부) -->
-        <div id="hearts-display" class="hearts-display" role="status" aria-live="polite" aria-label="생명력">
-          <span class="life-label">LIFE</span>
+        <div id="hearts-display" class="hearts-display" role="status" aria-live="polite" aria-label="생명력">              
+          <img src="assets/pixel_heart/heart (32x32).png" alt="하트" class="heart-icon" />
           <span id="hearts-count" class="hearts-count" aria-label="남은 생명">×5</span>
         </div>
 
@@ -260,6 +260,7 @@
   <script src="js/input.js" defer></script>
   <script src="js/render.js" defer></script>
   <script src="js/ui.js" defer></script>
+  <script src="js/stats.js" defer></script>
 
   <!-- 메인 게임 스크립트 -->
   <script src="game.js" defer></script>
